<resources>
    <string name="app_name">Health and Life</string>
    <string name="log_in">Log in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="weight">Your weight</string>
    <string name="concomitant_diseases">Concomitant diseases</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="sing_up">Sing up</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="retry">Retry</string>
    <string name="done">Done</string>
    <string name="heart_rate">Heart rate:</string>
    <string name="spo2">SpO2:</string>
    <string name="temp">Temperature:</string>
    <string name="name">Ivan Ivanov</string>
    <string name="address">Prushinskih St./ 72-37</string>
    <string name="send_results">Send Results</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="home_address">Home address:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="detailed_information">Detailed Info</string>
    <string name="medications">Medications</string>
</resources>