<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_login_layout"
        tools:context=".ui.screens.login.LoginFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/login_logo_size"
            android:layout_height="@dimen/login_logo_size"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@id/login_input_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_field"
            android:layout_width="275dp"
            android:layout_height="60dp"
            app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/password_input_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/login_input_filed_text"
                android:fontFamily="@font/exo_regular"
                android:hint="@string/login"
                android:maxLines="1"
                android:textColorHint="@color/black"
                android:textSize="@dimen/login_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_field"
            android:layout_width="275dp"
            android:layout_height="60dp"
            app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_input_field">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F9DFD7"
                android:fontFamily="@font/exo_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/login_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/login_button"
            android:fontFamily="@font/exo_regular"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sing_up_button"
            app:layout_constraintTop_toBottomOf="@id/password_input_field" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sing_up_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:backgroundTint="@color/login_button"
            android:fontFamily="@font/exo_regular"
            android:text="@string/sing_up"
            android:textAllCaps="false"
            android:textSize="@dimen/button_text_size"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>