<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_profile_layout">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Health and Life"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/white" />

            <ImageView
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="@id/tool_bar"
                app:layout_constraintEnd_toEndOf="@id/tool_bar"
                app:layout_constraintTop_toTopOf="@id/tool_bar" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/main_logo_size"
                android:layout_height="@dimen/main_logo_size"
                android:layout_marginTop="15dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="@id/tool_bar"
                app:layout_constraintStart_toStartOf="@id/tool_bar"
                app:layout_constraintTop_toTopOf="@id/tool_bar" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_field"
                android:layout_width="275dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/login_input_filed_text"
                    android:fontFamily="@font/exo_regular"
                    android:hint="@string/log_in"
                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/login_text_size" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field"
                android:layout_width="275dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/login_input_filed_text"
                    android:fontFamily="@font/exo_regular"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/login_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeat_password_field"
                android:layout_width="275dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/login_input_filed_text"
                    android:fontFamily="@font/exo_regular"
                    android:hint="@string/confirm_password"
                    android:maxLines="1"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/login_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sing_up_button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:backgroundTint="@color/login_button"
                android:fontFamily="@font/exo_regular"
                android:text="@string/sing_up"
                android:textAllCaps="false"
                android:textSize="@dimen/button_text_size"
                app:cornerRadius="@dimen/button_corner_radius"
                app:layout_constraintEnd_toEndOf="@id/repeat_password_field"
                app:layout_constraintStart_toStartOf="@id/repeat_password_field"
                app:layout_constraintTop_toBottomOf="@id/repeat_password_field" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>